add history to openapi
